classDiagram
    direction TB

    class EventStoreBuilderMain {
        +main(String[] args)
    }
    class EventStoreController {
        +start()
    }
    class EventStore {
        <<interface>>
        +store(String, String)
    }
    class FileEventStore
    class EventSubscriber {
        <<interface>>
        +subscribe(EventMessageHandler)
        +close()
    }
    class ActiveMqEventSubscriber

    EventStoreBuilderMain --> EventStoreController
    EventStoreController --> EventStore
    EventStoreController --> EventSubscriber
    FileEventStore ..|> EventStore
    ActiveMqEventSubscriber ..|> EventSubscriber
